<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/theme_background"
        android:orientation="vertical"
        android:padding="28dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/namaste"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="italic" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:scrollbarSize="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="1dp"
                android:text="@string/first_name"
                android:textColor="#5A5A5A"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#DAE0E2"
                android:cursorVisible="false"
                android:inputType="text"
                android:paddingStart="15dp"
                android:paddingTop="7dp"
                android:paddingEnd="12dp"
                android:paddingBottom="7dp"
                android:shadowColor="@color/blue_dark"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/blue"
                android:textColorHint="#003CFF"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="1dp"
                android:text="@string/last_name"
                android:textColor="#5A5A5A"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#DAE0E2"
                android:cursorVisible="false"
                android:inputType="text"
                android:paddingStart="15dp"
                android:paddingTop="7dp"
                android:paddingEnd="12dp"
                android:paddingBottom="7dp"
                android:shadowColor="@color/blue_dark"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/blue"
                android:textColorHint="#003CFF"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="1dp"
                android:text="@string/email"
                android:textColor="#5A5A5A"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/email_singUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#DAE0E2"
                android:cursorVisible="false"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:paddingTop="7dp"
                android:paddingEnd="12dp"
                android:paddingBottom="7dp"
                android:shadowColor="@color/blue_dark"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/blue"
                android:textColorHint="#003CFF"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="1dp"
                android:text="@string/pin_code"
                android:textColor="#5A5A5A"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#DAE0E2"
                android:cursorVisible="false"
                android:inputType="number"
                android:paddingStart="15dp"
                android:paddingTop="7dp"
                android:paddingEnd="12dp"
                android:paddingBottom="7dp"
                android:shadowColor="@color/blue_dark"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/blue"
                android:textColorHint="#003CFF"
                tools:ignore="RtlSymmetry,TextFields"
                android:importantForAutofill="no" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="1dp"
                android:text="@string/password"
                android:textColor="#5A5A5A"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/password_signUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:cursorVisible="false"
                    android:inputType="textPassword"
                    android:paddingTop="7dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="7dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/blue"
                    android:textColorHint="#003CFF" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/signUp"
                android:layout_width="247dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="65dp"
                android:background="@drawable/button_design"
                android:elevation="5dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/signup_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:text="@string/cancel"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/text_secondary"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>