<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:elevation="7dp"
    app:cardCornerRadius="7dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/reset_password"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="1dp"
            android:text="@string/email"
            android:textColor="#5A5A5A"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/email_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#DAE0E2"
            android:cursorVisible="false"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:paddingTop="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="12dp"
            android:shadowColor="@color/blue_dark"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/blue"
            android:textColorHint="#003CFF"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_reset"
                style="@style/TextAppearance.MaterialComponents.Button"
                android:layout_width="147dp"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_design"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/send_reset"
                style="@style/TextAppearance.MaterialComponents.Button"
                android:layout_width="147dp"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_design"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>